k3s-lab/ldap/07-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lam
  namespace: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lam
  template:
    metadata:
      labels:
        app: lam
    spec:
      containers:
      - name: lam
        image: ldapaccountmanager/lam:stable
        ports:
        - containerPort: 80
