k3s-lab/ldap/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lam
  namespace: ldap
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ldap.k3s.local
    secretName: lam-tls
  rules:
  - host: ldap.k3s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lam
            port:
              number: 80
